force-app/main/default/objects/Survey_Sheet__c/Survey_Sheet__c.object-meta.xml
<CustomObject>
    <label>Survey Sheet</label>
    <nameField>
        <displayFormat>SS-{0000}</displayFormat>
        <label>Survey Sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Sheet</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>