force-app/main/default/objects/Survey_Sheet__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Customer (In case survey&apos;s linked object related to customer )</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey Sheet</relationshipLabel>
    <relationshipName>Customer_Survey</relationshipName>
    <type>Lookup</type>
</CustomField>