force-app/main/default/objects/Survey_Sheet__c/fields/Info_1__c.field-meta.xml
<CustomField>
    <fullName>Info_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Form Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>