force-app/main/default/objects/Survey_Sheet__c/fields/Is_SurveyA_Approve__c.field-meta.xml
<CustomField>
    <fullName>Is_SurveyA_Approve__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check if the survey is improve or not</description>
    <label>Is SurveyA Approve</label>
    <type>Checkbox</type>
</CustomField>