force-app/main/default/objects/Survey_Sheet__c/fields/RM_No_TMB_Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>RM_No_TMB_Cust_ID__c</fullName>
    <formula>Customer__r.TMB_Customer_ID_PE__c</formula>
    <label>RM No. (TMB Cust ID)</label>
    <type>Text</type>
</CustomField>