force-app/main/default/objects/Survey_Sheet__c/fields/Survey_Version__c.field-meta.xml
<CustomField>
    <fullName>Survey_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Version</label>
    <referenceTo>Survey_Version__c</referenceTo>
    <relationshipName>Customer_Survey</relationshipName>
    <type>Lookup</type>
</CustomField>